--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,120 +1,18 @@
-:root {
-    height: 100%;
-    --editor-color-text: theme("colors.white");
-    --editor-color-constant: theme("colors.emerald.300");
-    --editor-color-string: theme("colors.emerald.300");
-    --editor-color-comment: theme("colors.zinc.500");
-    --editor-color-keyword: theme("colors.sky.300");
-    --editor-color-parameter: theme("colors.pink.300");
-    --editor-color-function: theme("colors.violet.300");
-    --editor-color-string-expression: theme("colors.emerald.300");
-    --editor-color-punctuation: theme("colors.zinc.200");
-    /* --foreground-rgb: 0, 0, 0;
-	--background-start-rgb: 214, 219, 220;
-	--background-end-rgb: 255, 255, 255; */
-}
-
-@media (prefers-color-scheme: dark) {
-    /* :root {
-		--foreground-rgb: 255, 255, 255;
-		--background-start-rgb: 0, 0, 0;
-		--background-end-rgb: 0, 0, 0;
-	} */
-}
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 @layer base {
-    :root {
-        --background: 0 0% 100%;
-        --foreground: 222.2 84% 4.9%;
-
-        --muted: 210 40% 96.1%;
-        --muted-foreground: 215.4 16.3% 46.9%;
-
-        --popover: 0 0% 100%;
-        --popover-foreground: 222.2 84% 4.9%;
-
-        --card: 0 0% 100%;
-        --card-foreground: 222.2 84% 4.9%;
-
-        --border: 214.3 31.8% 91.4%;
-        --input: 214.3 31.8% 91.4%;
-
-        --primary: 222.2 47.4% 11.2%;
-        --primary-foreground: 210 40% 98%;
-
-        --secondary: 210 40% 96.1%;
-        --secondary-foreground: 222.2 47.4% 11.2%;
-
-        --accent: 210 40% 96.1%;
-        --accent-foreground: 222.2 47.4% 11.2%;
-
-        --destructive: 0 84.2% 60.2%;
-        --destructive-foreground: 210 40% 98%;
-
-        --ring: 215 20.2% 65.1%;
-
-        --radius: 0.5rem;
-    }
-
-    .dark {
-        --background: 222.2 84% 4.9%;
-        --foreground: 210 40% 98%;
-
-        --muted: 217.2 32.6% 17.5%;
-        --muted-foreground: 215 20.2% 65.1%;
-
-        --popover: 222.2 84% 4.9%;
-        --popover-foreground: 210 40% 98%;
-
-        --card: 222.2 84% 4.9%;
-        --card-foreground: 210 40% 98%;
-
-        --border: 217.2 32.6% 17.5%;
-        --input: 217.2 32.6% 17.5%;
-
-        --primary: 210 40% 98%;
-        --primary-foreground: 222.2 47.4% 11.2%;
-
-        --secondary: 217.2 32.6% 17.5%;
-        --secondary-foreground: 210 40% 98%;
-
-        --accent: 217.2 32.6% 17.5%;
-        --accent-foreground: 210 40% 98%;
-
-        --destructive: 0 62.8% 30.6%;
-        --destructive-foreground: 0 85.7% 97.3%;
-
-        --ring: 217.2 32.6% 17.5%;
-    }
-}
-
-@layer base {
     * {
-        @apply border-border;
+        @apply border-zinc-200;
     }
-    body {
-        @apply bg-background text-foreground;
+    html {
+        scroll-behavior: smooth;
         height: 100%;
     }
-}
-
-html {
-    scroll-behavior: smooth;
-    height: 100%;
-}
-
-body {
-    color: rgb(var(--foreground-rgb));
-    background: linear-gradient(
-            to bottom,
-            transparent,
-            rgb(var(--background-end-rgb))
-        )
-        rgb(var(--background-start-rgb));
+    body {
+        @apply relative text-zinc-900 h-full;
+    }
 }
 
 @layer utilities {
