--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -20,3 +20,10 @@
         text-wrap: balance;
     }
 }
+
+.swiper-pagination-bullet {
+    @apply h-4 w-4 rounded-full opacity-100 border-2 cursor-pointer border-pink-500 bg-transparent;
+}
+.swiper-pagination-bullet-active {
+    @apply bg-pink-500;
+}
