Updated Add Slider To Posts Submenu

--- a/style.css
+++ b/style.css
@@ -4,6 +4,6 @@ Author: usegroup
 Author URI: http://www.usegroup.de
 Description: Woocommerce custom developed theme with functionality for Found&Scan
 Version: 1.0
-Text Domain: i18n
+Text Domain: usegroup
 Tmplate: storefront
 */
